<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nomor_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_100"
        android:textColor="@color/warna_tulisan"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/nama_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama_surah"
        android:textColor="@color/warna_tulisan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asma_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/asma"
        android:textColor="@color/warna_tulisan_arab"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/amiri_bold"
        app:layout_constraintBottom_toBottomOf="@+id/nama_surah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nama_surah" />

    <TextView
        android:id="@+id/arti_nama_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/arti_nama"
        android:textColor="@color/warna_tulisan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nama_surah"
        app:layout_constraintTop_toBottomOf="@+id/nama_surah" />

    <TextView
        android:id="@+id/jumlahayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="| 7 Ayat"
        android:textColor="@color/warna_tulisan"
        app:layout_constraintBottom_toBottomOf="@+id/arti_nama_surah"
        app:layout_constraintStart_toEndOf="@+id/arti_nama_surah"
        app:layout_constraintTop_toTopOf="@+id/arti_nama_surah" />

    <TextView
        android:id="@+id/diturunkanDI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAllCaps="true"
        android:textColor="@color/warna_tulisan"
        app:layout_constraintBottom_toBottomOf="@+id/jumlahayat"
        app:layout_constraintEnd_toEndOf="@+id/asma_surah"
        app:layout_constraintTop_toTopOf="@+id/jumlahayat" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/arti_nama_surah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nama_surah" />
</androidx.constraintlayout.widget.ConstraintLayout>